--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ nav ul li a:hover {
 
 /* Hero section styles */
 .hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./img/home.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./home.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
